# pidog-nova

./: .gitignore  .nova  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
app/: __init__.py  config.py  config_store.py  main.py  proxy.py  registry.py  vda5050_bridge.py
src/pidog_nova/: __init__.py  _utils.py  camera_hub.py  config_store.py  driver.py  main.py  pidog_client.py  settings.py  vda5050_adapter.py  vda5050_bridge.py
tests/: test_main.py  test_proxy.py
ui/: index.html
